--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -7,3 +7,9 @@ body{
     background: linear-gradient(to right, rgba(204, 83, 51, 0.6), rgba(35, 7, 77, 0.6));
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+.tit{
+    font-family: 'Pacifico', cursive;
+    font-size: 50px;
+    color:  #543b54;
+    
+}
