--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -17,7 +17,12 @@ body{
     font-size: 90px;
     color:  #543b54; 
 }
-
+.letra{
+    color:  #543b54; 
+}
+.btgit:hover{
+    color: white;   
+}
 .btn-rounded{
     border-radius: 10em;
 }
