--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -44,3 +44,20 @@ button, input[type=submit]{
 .altura{
     height: 74vh;
 }
+
+
+@media (min-width: 1450px) {
+    .p1{
+        padding-left: 150px;
+    }
+}
+@media (min-width: 730px ) and (max-width:1450px){
+    .p1{
+        padding-left: 90px;
+    }
+}
+.titulo{
+    font-family: Pacifico;
+    font-size: 25px;
+    color:  #543b54; 
+}
