BD con imágenes asignaturas actualizada

--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -55,5 +55,5 @@ button, input[type=submit]{
 .titulo2{
     font-family: cursive;
     font-size: 50px;
-    color:  #4D2034; 
+    color:  #3C1F34; 
 }
