progreso crear pregunta cambio reg

--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -53,7 +53,7 @@ button, input[type=submit]{
     color:  #543b54; 
 }
 .titulo2{
-    font-family: cursive;
+    /*font-family: cursive;*/
     font-size: 50px;
     color:  #3C1F34; 
 }
