--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -66,3 +66,10 @@ button, input[type=submit]{
 .t1{
     font-size: 30px;
 }
+
+#preguntasCreadas li{
+    margin-top: 10px;
+}
+#preguntasCreadas li p:nth-child(1){
+    background-color: #d5e1df;
+}
