Cambios diseño nav+ footer

--- a/Mamas_2.0/css/style.css
+++ b/Mamas_2.0/css/style.css
@@ -73,3 +73,6 @@ button, input[type=submit]{
 #preguntasCreadas li p:nth-child(1), .enunciadoPregunta{
     background-color: #d5e1df;
 }
+.colorNav{
+    background: #543B54;
+}
